# Editor

./: .gitignore  CMakeLists.txt  README.md  config.xml
src/: CMakeLists.txt
src/editor/: CMakeLists.txt  app.cc  app.h  config.cc  config.h  edit_command.cc  edit_command.h  edit_command_manager.cc  edit_command_manager.h  line_number_panel.cc  line_number_panel.h  main_frame.cc  main_frame.h  selection_region.cc  selection_region.h  text_file.cc  text_file.h  text_line.cc  text_line.h  text_listener.h  text_panel.cc  text_panel.h  text_scroll_window.cc  text_scroll_window.h
src/syntax/: CMakeLists.txt  cpp_parser.cc  cpp_parser.h
src/tinyxml/: CMakeLists.txt  tinyxml.h
